<resources>
    <string name="app_name">FreedomNetworkPOS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="withdraw">Withdraw</string>
    <string name="transfer">Transfer</string>
    <string name="eod">EOD</string>
    <string name="airtime">Airtime</string>
    <string name="transaction">Transaction</string>
    <string name="bank_network">Bank Network</string>
    <string name="card_balance">Card Balance</string>
    <string name="bills">Bills</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="agent_pin">Agent PIN</string>
    <string name="agent_id">Agent ID</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="proceed">Proceed</string>
    <string name="please_insert_card_here">Please insert your card here</string>


    <string name="amount_format">\u20A6 %1$s</string>
    <string name="amount_format_ngn">NGN %1$s</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="savings">Savings</string>
    <string name="current">Current</string>
    <string name="default_acc">Default</string>
    <string name="transaction_reports">Transaction Reports</string>
    <string name="end_of_day_report">End of Day Report</string>
    <string name="full_report">Full Report</string>
    <string name="summary">Summary</string>
    <string name="transfer_method">Transfer Method</string>
    <string name="error_required">Required</string>
    <string name="receipt">Receipt</string>
    <string name="loading">transaction_status</string>
    <string name="date_time">Date/Time</string>
    <string name="successful">Successful</string>
    <string name="card">Card</string>
    <string name="payment_method">Payment Method</string>
    <string name="reference">Reference</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="reprint_receipt">Reprint Receipt</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="preview_summary">Preview Summary</string>
    <string name="print_report">Print Report</string>
    <string name="select_date_range">Select date range</string>
    <string name="select_biller">Select Biller</string>
    <string name="network_signal">Network Signal</string>
    <string name="select_tv_provider">Select TV Provider</string>
    <string name="select_disco">Select Disco</string>
    <string name="make_purchase">Make Purchase</string>
    <string name="bill_payment">Bill payment</string>
    <string name="select_network">Select Network</string>

</resources>