<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".common.ui.card.AmountEntryFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_arrow_left" />

        <TextView
            style="@style/f14w500"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/withdrawal"
            android:textAlignment="center"
            android:textColor="@color/black"/>

    </FrameLayout>

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_medium"
        android:textStyle="normal"
        android:textSize="16sp"
        android:lineHeight="16sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_amount" />

    <TextView
        android:layout_gravity="center"
        android:id="@+id/amountTextView"
        android:fontFamily="@font/inter_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:textSize="45sp"
        android:maxLength="15"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="0.00" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/agent_account_bg"
        android:backgroundTint="@null"
        app:backgroundTint="@null"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/proceed"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:insetLeft="0dp"
        android:insetRight="0dp" />

    <com.tegritech.commons.ui.Keypad
        android:id="@+id/keyPad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#eee"
        app:isNumberPad="true"
        android:layout_weight="1"
        app:receiver="@+id/amountTextView" />

</androidx.appcompat.widget.LinearLayoutCompat>