<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".eod.EndOfDayFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            app:srcCompat="@drawable/ic_arrow_left" />

        <TextView
            style="@style/f12w500"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/end_of_day_report"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </FrameLayout>

    <TextView
        style="@style/f12w400"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="Customize and export a file containing transaction history report in CSV file format."
        android:textAlignment="center"
        android:textColor="@color/filled_text" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/textFieldBg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/border_radius_5"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="Today"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_calendar_search" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="9dp"
        android:orientation="horizontal">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#E7E9EF" />

        <TextView
            style="@style/f12w400"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:gravity="center"
            android:text="Select Report Type"
            android:textAlignment="center"
            android:textColor="@color/filled_text" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#E7E9EF" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/summary_text_view"
        style="@style/f12w400"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:background="#F1F2F6"
        android:fontFamily="@font/mazzard"
        android:paddingStart="30dp"
        android:paddingTop="14dp"
        android:paddingEnd="30dp"
        android:paddingBottom="12dp"
        android:text="@string/summary"
        android:textAlignment="textStart"
        android:textColor="@color/filled_text" />

    <TextView
        android:id="@+id/full_report_text_view"
        style="@style/f12w400"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#F1F2F6"
        android:fontFamily="@font/mazzard"
        android:paddingStart="30dp"
        android:paddingTop="14dp"
        android:paddingEnd="30dp"
        android:paddingBottom="12dp"
        android:text="@string/full_report"
        android:textAlignment="textStart"
        android:textColor="@color/filled_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/previewSummaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/failed"
        android:text="@string/preview_summary"
        android:textColor="@android:color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>